# spdlog_fold_sink

./: CMakeLists.txt  readme.md
.cache/clangd/index/: fold_sink.h.AB34709792FBC07E.idx  fold_sink.h.E6190CF9DEC53BC7.idx  main.cpp.4ABF9A33C5707DC5.idx  main.cpp.56C8626579F28179.idx
include/: fold_sink.h
src/: main.cpp
